<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">


    <Button
        android:layout_margin="10dp"
        android:id="@+id/requestform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plasma_request"
         />

    <Button
        android:layout_margin="10dp"
        android:id="@+id/donateform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donate_request" />
    <Button
        android:layout_margin="10dp"
        android:id="@+id/otherinfoform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_details_request" />

</LinearLayout>
