<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragement.LoginFragment"
    android:orientation="vertical"
    android:fillViewport="true"
    android:isScrollContainer="true"
    android:background="@color/white"
    android:padding="@dimen/_8sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@id/logintext"
        android:text="@string/welcome"
        android:id="@+id/welcometext"
        android:textSize="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/blue"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/logintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcometext"
        android:text="@string/sign_in_to_continue"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintBottom_toTopOf="@id/enteremail"
        android:textSize="@dimen/_18sdp"
        android:textColor="@color/ligh_blue"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enteremail"
            android:backgroundTint="@color/black"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logintext"
            app:layout_constraintBottom_toTopOf="@id/enterpass"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/enter_email_phone"
            android:textSize="@dimen/_15sdp"/>

        <EditText
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/black"
            android:id="@+id/enterpass"
            app:layout_constraintBottom_toTopOf="@id/loginbutton"
            app:layout_constraintTop_toBottomOf="@+id/enteremail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/_15sdp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:autofillHints="@string/enter_password" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/enterpass"
        android:text="@string/login"
        android:textSize="@dimen/_20sdp"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginbutton"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/forgot_password"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/ligh_blue"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>