<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragement.OtherInfoFormFragment">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/enterrepass"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_height="wrap_content"
        android:focusable="true"
        app:hintTextColor="@color/black"
        android:focusableInTouchMode="true"
        android:padding="@dimen/_5sdp"
        app:layout_constraintBottom_toTopOf="@id/enetrdesc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_15sdp"
        >
        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_phone"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/enetrdesc"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_height="wrap_content"
        android:focusable="true"
        app:hintTextColor="@color/black"
        android:focusableInTouchMode="true"
        android:padding="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/enterrepass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_15sdp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:hint="@string/enter_desc"
            android:autofillHints="@string/enter_age"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signupbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enetrdesc"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/submit"
        android:textSize="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_20sdp" />

</androidx.constraintlayout.widget.ConstraintLayout>