<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragement.DashboardFragment"
    android:fillViewport="true"
    android:isScrollContainer="true"
    android:background="@color/ligh_blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/plasmarequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/plasma_request"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"/>
    <TextView
        android:id="@+id/plamacount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plasmarequest"
        android:text="0000"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/_30sdp"
        />
    <TextView
        android:id="@+id/availabledonor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/plasmarequest"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/available_donor"
        android:textSize="@dimen/_13sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/availabledonor"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/plamacount"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/black"
        android:text="0000"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginStart="@dimen/_60sdp"
        />
    <TextView
        android:id="@+id/otherinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/plamacount"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/other_information"
        android:textSize="@dimen/_13sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/othercount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/otherinfo"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/black"
        android:text="0000"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginStart="@dimen/_30sdp"
        />
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/othercount"
            android:theme="@style/cardview_custom">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/request_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>